# Tako

./: .gitignore  CMakeLists.txt  GenerateProjects.bat
includes/: api.h  common.h  graphiccontext.h  tako.h
src/: api.cpp  capturemanager.cpp  capturemanager.h  compositor.cpp  compositor.h  d3d11context.cpp  d3d11context.h  graphiccontext.cpp  taco.cpp
src/shaders/: compositor_ps.hlsl  compositor_vs.hlsl
